samples/_failures_safe/1761477930_6d5cf3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_23034ae6.c: In function ‘main’:
./samples/SAFE/__tmp_23034ae6.c:133:5: error: expected expression at end of input
  133 |     if (
      |     ^~
./samples/SAFE/__tmp_23034ae6.c:133:5: error: expected declaration or statement at end of input
